<resources>
    <string name="action_settings">Settings</string>


    <string name="app_name">Personal Notes</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close </string>
    <string name="title_activity_make_note">Make Note</string>
    <string name="title">Title</string>
    <string name="NO_TIME">No Time</string>
    <string name="NO_DATE">No Date</string>
    <string name="trash">Trash</string>
    <string name="archives">Archives</string>
    <string name="helpandfeedback"><![CDATA[Help & FeedBack]]></string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_archive">Archive</string>
    <string name="lorem">Lorem ipsum dolor sit amet, tempus ante arcu autem, wisi porta lectus sed feugiat, pede nullam nec commodo non tincidunt dui. Dictumst ante ultricies integer, duis nec, perspiciatis autem molestie ullamcorper magna sit nec, egestas tincidunt non ac tincidunt. Interdum maecenas aliquet id lacus, aenean ut mattis, consequat fusce turpis bibendum. Suspendisse semper sit.</string>
    <string name="title_activity_google_drive_uploader">Send to Drive</string>
    <string name="action_device">Store in device</string>
    <string name="action_google_drive">Google Drive</string>
    <string name="action_dropbox">Dropbox</string>
    <string name="list_item">New item</string>
    <string name="description">Description</string>
    <string name="action_gallery">Choose from Gallery</string>
    <string name="action_camera">Capture image</string>
    <string name="settings">Drive Location Preference</string>
    <string name="title_activity_list_files">List Files</string>
    <string name="title_activity_base_demo">BaseDemo</string>
    <string name="title_activity_create_file">CreateFile</string>
    <string name="title_activity_online_photo_selection">Photo Selection</string>
    <string name="title_activity_selection_drop_box">DropBox</string>
    <string name="select">Select</string>
    <string name="log_out">Log out</string>
    <string name="save_location">Select</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_empty">Empty Trash</string>
    <string name="new_directory">Create</string>
    <string name="folder_name">Folder Name</string>
    <string name="is_default">Currently selected default</string>
    <string name="note_activity">Note Activity</string>

    <string name="auth_message">Tap icon to authenticate</string>
    <string name="storing_at">Storing at %s"</string>
    <string name="folder_created">Folder created</string>
    <string name="folder_create_error">Error while creating a folder</string>
    <string name="image_location_saved_dropbox">You have set image location in dropbox</string>
    <string name="auth_error_dropbox">Couldn\'t authenticate with Dropbox: %s</string>

    <string name="activity_notes">NOTES</string>
    <string name="activity_reminders">REMINDERS</string>
    <string name="activity_trash">Trash</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_archives">Archives</string>
    <string name="activity_make_reminder">Make Reminder</string>
    <string name="activity_make_notes">Make Note</string>

    <string name="drawer_notes">Notes</string>
    <string name="drawer_reminders">Reminders</string>
    <string name="drawer_trash">Trash</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_archives">Archives</string>
    <string name="drawer_help_and_feedback">Help &amp; Feedback</string>

    <string name="no_archives">NO ARCHIVES</string>
    <string name="no_trash">TRASH IS EMPTY</string>
    <string name="empty">EMPTY</string>
    <string name="empty_trash">Trash Empty</string>
    <string name="no_time">No Time</string>
    <string name="placeholder_lorem_ipsum" />
    <!-- String used to wrap navigation item descriptions for a11y users to indicate the user
         interface element is a menu item. -->
    <string name="navdrawer_menu_item_a11y_wrapper">%1$s  menu item</string>

    <!-- String used to wrap navigation item descriptions for a11y users to indicate the user
         interface element is a menu item. This string indicates a selected menu item -->
    <string name="navdrawer_selected_menu_item_a11y_wrapper">%1$s selected menu item</string>
    <!-- Accessibility description for navigation drawer -->
    <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major
        features of the application</string>
    <string name="about_main">About Personal Note</string>
    <string name="about">About</string>
</resources>
