<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flickr="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_grey600_24dp"
        flickr:showAsAction="always"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_image_grey600_24dp"
        android:title="@string/action_archive"
        android:orderInCategory="50"
        flickr:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_lead_pencil_grey600_24dp"
        android:title="@string/action_edit"
        android:orderInCategory="10"
        flickr:showAsAction="always" />
</menu>
