<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flickr="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_device"
        android:orderInCategory="1"
        android:icon="@drawable/ic_delete_grey600_48dp"
        flickr:showAsAction="always"
        android:title="@string/action_device" />
    <item
        android:id="@+id/action_google_drive"
        android:icon="@drawable/ic_image_grey600_24dp"
        android:title="@string/action_google_drive"
        android:orderInCategory="10"
        flickr:showAsAction="always" />
    <item
        android:id="@+id/action_dropbox"
        android:icon="@drawable/ic_lead_pencil_grey600_24dp"
        android:title="@string/action_dropbox"
        android:orderInCategory="100"
        flickr:showAsAction="always" />
</menu>