<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AppAuthenticationActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ImageView
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_below="@id/app_bar"
        android:id="@+id/google_drive_set"
        android:src="@drawable/google_drive"
        android:layout_height="100dp"
        android:layout_width="100dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_alignTop="@+id/google_drive_set"
        android:layout_toRightOf="@id/google_drive_set"
        android:layout_toEndOf="@id/google_drive_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/action_google_drive"
            android:textSize="@dimen/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_google_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/tick_google_drive"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@color/notesSelectionTickColor"
                android:src="@drawable/ic_check_grey600_48dp"
                android:layout_width="12dp"
                android:layout_height="12dp" />

            <TextView
                android:layout_marginLeft="@dimen/menu_padding"
                android:layout_marginStart="@dimen/menu_padding"
                android:textSize="@dimen/small_menu_label"
                android:text="@string/is_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:id="@+id/drop_box_set"
        android:src="@drawable/dropbox"
        android:layout_below="@id/google_drive_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/menu_padding"
        android:layout_marginStart="@dimen/menu_padding"
        android:layout_marginLeft="@dimen/menu_padding"
        android:layout_alignTop="@id/drop_box_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/drop_box_set"
        android:layout_toEndOf="@+id/drop_box_set">

        <TextView
            android:text="@string/action_dropbox"
            android:textSize="@dimen/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_drop_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/tick_drop_box"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@color/notesSelectionTickColor"
                android:src="@drawable/ic_check_grey600_48dp"
                android:layout_width="12dp"
                android:layout_height="12dp" />

            <TextView
                android:layout_marginLeft="@dimen/menu_padding"
                android:layout_marginStart="@dimen/menu_padding"
                android:textSize="@dimen/small_menu_label"
                android:text="@string/is_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>